# aro

./: .context  .context.repairs.jsonl  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GEN_TODO.md  GOVERNANCE.md  LICENSE  MISSING.md  OVERVIEW.md  Package.resolved  Package.swift  README.md  SECURITY.md  SUPPORT.md  WIKI_ACTION_REFERENCE.md  WIKI_UPDATE_NOTES.md  WIKI_UPDATE_NOTES_ARO0072.md  WIKI_UPDATE_NOTES_HandlerGuardScope.md  WIKI_UPDATE_NOTES_MR132.md  animations.js  disclaimer.html  doc-template.html  docker-compose.yml  docs.html  download.html  events.jsonl  fdd.html  getting-started.html  index.html  package-lock.json  style.css  test-examples-in-docker.sh  test-examples.pl  (+3 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.gitlab/: intellij-plugin.gitlab-ci.yml
Book/: strip-html-for-pdf.lua
Documentation/: ActionDeveloperGuide.md  GettingStarted.md  LanguageTour.md  README.md  StartWithARO.md
Examples/: list-of-actions.txt
Examples/CSVProcessor/Plugins/plugin-rust-csv/: Cargo.toml  plugin.yaml
Examples/CSVProcessor/Plugins/plugin-rust-csv/src/: lib.rs
Graphics/: logo.afdesign  social.afdesign
Plans/: ARO-0046-typed-event-extraction.md
Proposals/: ARO-0001-core-syntax.md  ARO-0001-language-fundamentals.md  ARO-0002-control-flow.md  ARO-0002-literals-expressions.md  ARO-0003-type-system.md  ARO-0003-variable-scoping.md  ARO-0004-actions.md  ARO-0004-conditional-branching.md  ARO-0005-application-architecture.md  ARO-0005-iteration-loops.md  (+87 more)
(+2410 files in other folders)
