[package]
name = "csv_plugin"
version = "1.0.0"
edition = "2021"
description = "ARO plugin for CSV parsing and formatting"
license = "MIT"

[lib]
name = "csv_plugin"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
serde_json = "1.0"
aro-plugin-sdk = { git = "https://github.com/arolang/aro-plugin-sdk-rust.git", branch = "main" }

[profile.release]
lto = true
opt-level = "z"
